--- a/talk/2023-international-forum-for-security-research-inforsec-2023/index.html
+++ b/talk/2023-international-forum-for-security-research-inforsec-2023/index.html
@@ -965,7 +965,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 540px;">
   <div style="position: relative">
-    <img src="/talk/2023-international-forum-for-security-research-inforsec-2023/featured_hu5575e4e6d3b42e2da31e4d748e0dab00_5843825_720x2500_fit_q75_h2_lanczos.webp" width="720" height="540" alt="" class="featured-image">
+    <img src="/talk/2023-international-forum-for-security-research-inforsec-2023/featured_hud0c1ec962b15c4d486d98c88d1587595_186522_720x2500_fit_q75_h2_lanczos.webp" width="720" height="540" alt="" class="featured-image">
     
   </div>
 </div>
@@ -1035,7 +1035,7 @@
       <p>DomainKeys Identified Mail (DKIM) is an email authentication protocol to protect the integrity of email contents. It has been proposed and standardized for over a decade and adopted by Yahoo!, Google, and other leading email service providers. However, little has been done to understand the adoption rate and potential security issues of DKIM due to the challenges of measuring DKIM deployment at scale. <br> In this paper, we provide a large-scale and longitudinal measurement study on how well DKIM is deployed and managed. Our study was made possible by a broad collection of datasets, including 9.5 million DKIM records from passive DNS datasets over five years and 460 million DKIM signatures from real-world email headers. Moreover, we conduct an active measurement on Alexa Top 1 million domains. Our measurement results show that 28.1% of Alexa Top 1 million domains have enabled DKIM, of which 2.9% are misconfigured. We demonstrate that the issues of DKIM key management and DKIM signatures are prevalent in the real world, even for well-known email providers (e.g., Gmail and Mail.ru). We recommend the security community should pay more attention to the systemic problems of DKIM deployment and mitigate these issues from the perspective of protocol design.</p>
 <p>We also proposed an online detection tool for email administrator, called &ldquo;Nospoofing&rdquo;.
 NoSpoofing: <a href="https://nospoofing.cn/" target="_blank" rel="noopener">https://nospoofing.cn/</a></p>
-
+<img src="/event/InforSec-2023/inforsec.jpg">
     </div>
 
     
