--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
       <p>Hello, I am Chuhan Wang, a 4th year Ph.D. student at the <a href="https://netsec.ccert.edu.cn" target="_blank" rel="noopener">Network and Information Security Lab (NISL)</a> of Tsinghua University, advised by Prof. <a href="https://netsec.ccert.edu.cn/people/duanhx/" target="_blank" rel="noopener">Haixin Duan</a> and Assistant Prof. <a href="https://www.jianjunchen.com/" target="_blank" rel="noopener">Jianjun Chen</a>. My research interests include Web Security, Network Security, and Internet Measurement. Currently, I focus on email-related security research. I have published two papers in USENIX Security, a top-tier academic conference on network security. My research results have helped Google, Apple, Yandex, and other well-known Internet companies to fix vulnerabilities. As a member of Redbud, a CTF team belonging to Tsinghua University, I have won the ByteCTF 2020 championship and other CTF awards.</p>
 <h2 id="recent-news"><strong>Recent News</strong></h2>
 <ul>
-<li>[4/2023] I presented my USENIX &lsquo;22 paper about the measurement and security analysis of DKIM on InforSec 2023, in Shenzhen, China.</li>
+<li>[4/2023] I presented my USENIX Security &lsquo;22 paper about the measurement and security analysis of DKIM on InforSec 2023, in Shenzhen, China.</li>
 <li>[3/2022] Our paper on the large-scale measurement of DKIM deployment accepted by USENIX Security 2022.</li>
 <li>[9/2020] Our paper on email spoofing attacks was accepted by USENIX Security 2021.</li>
 </ul>
