--- a/publication/security21/index.html
+++ b/publication/security21/index.html
@@ -887,8 +887,8 @@
     
 
   <span >
-      Kaiwen Shen</span>, <span class="author-highlighted">
-      Chuhan Wang</span>, <span >
+      Kaiwen Shen</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span class="author-highlighted">
+      Chuhan Wang</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Minglei Guo</span>, <span >
       Xiaofeng Zheng</span>, <span >
       Chaoyi Lu</span>, <span >
