--- a/publication/index.html
+++ b/publication/index.html
@@ -977,8 +977,8 @@
     
 
   <span >
-      Kaiwen Shen</span>, <span class="author-highlighted">
-      Chuhan Wang</span>, <span >
+      Kaiwen Shen</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span class="author-highlighted">
+      Chuhan Wang</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Minglei Guo</span>, <span >
       Xiaofeng Zheng</span>, <span >
       Chaoyi Lu</span>, <span >
@@ -991,7 +991,7 @@
   </span>
   (2021).
   <a href="/publication/security21/">Weak Links in Authentication Chains: A Large-scale Analysis of Email Sender Spoofing Attacks</a>.
-  In <a href="https://www.usenix.org/conference/usenixsecurity21/" target="_blank" rel="noopener"><em>USENIX Security &lsquo;21</em></a>. Vancouver, BC, Canada. August 11-13, 2021 (Acceptance rate: 246/1316=18.7%).
+  In <a href="https://www.usenix.org/conference/usenixsecurity21/" target="_blank" rel="noopener"><em>USENIX Security &lsquo;21</em></a>. Vancouver, BC, Canada. August 11-13, 2021 (Acceptance rate: 246/1316=18.7%).<br>ⓘ Both are first authors.
   
   <p>
 
