--- a/publication/ccs23/index.html
+++ b/publication/ccs23/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: June 20, 2023 --><html lang="en-us" >
+<!-- Last Published: September 21, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -1019,7 +1019,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <a href="https://www.sigsac.org/ccs/CCS2023/" target="_blank" rel="noopener"><em>CCS &lsquo;23</em></a>. Copenhagen, Denmark. November 26-30, 2023 (Acceptance rate: ??)</div>
+          <div class="col-12 col-md-9">In <a href="https://www.sigsac.org/ccs/CCS2023/" target="_blank" rel="noopener"><em>CCS &lsquo;23</em></a>. Copenhagen, Denmark. November 26-30, 2023 (Acceptance rate: 234/1222=19.1%, Acceptance rate in first round: 76/427=17.8%, Acceptance rate in second round: 158/795=19.8%)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
