--- a/publication/security21/index.html
+++ b/publication/security21/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: September 21, 2023 --><html lang="en-us" >
+<!-- Last Published: September 22, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -1421,7 +1421,7 @@ We designed a Chrome Extension called NoSpoofing. It is a UI notification scheme
 
   
   <p class="powered-by copyright-license-text">
-    Copyright © Academic Blog of Chuhan Wang 2022
+    Copyright © Academic Blog of Chuhan Wang 2022-2023
   </p>
   
 
