--- a/talk/2023-international-forum-for-security-research-inforsec-2023/index.html
+++ b/talk/2023-international-forum-for-security-research-inforsec-2023/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: September 21, 2023 --><html lang="en-us" >
+<!-- Last Published: September 22, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -1350,7 +1350,7 @@ NoSpoofing: <a href="https://nospoofing.cn/" target="_blank" rel="noopener">http
 
   
   <p class="powered-by copyright-license-text">
-    Copyright © Academic Blog of Chuhan Wang 2022
+    Copyright © Academic Blog of Chuhan Wang 2022-2023
   </p>
   
 
