--- a/index.html
+++ b/index.html
@@ -2375,7 +2375,7 @@
 </ul>
 <h3 id="-patents">🔖 Patents</h3>
 <ul>
-<li><a href="https://patents.google.com/patent/CN113381983A" target="_blank" rel="noopener">ZL202110548160.X: A Method and Device for Recognizing Forged Emails</a></li>
+<li><a href="https://patents.google.com/patent/CN113381983A" target="_blank" rel="noopener">ZL202110548160.X: A Method and Device for Recognizing Email Spoofing</a></li>
 </ul>
 <!-- ### 🐞 CNVD/CNNVD/CVE
 
