Add new event NDSS2024

--- a/publication/index.html
+++ b/publication/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: December 1, 2023 --><html lang="en-us" >
+<!-- Last Published: March 6, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -995,7 +995,7 @@
   </span>
   (2024).
   <a href="/publication/ndss24-b/">ReqsMiner: Automated Discovery of CDN Forwarding Request Inconsistencies and DoS Attacks with Grammar-based Fuzzing</a>.
-  In <a href="https://www.ndss-symposium.org/ndss2024/" target="_blank" rel="noopener"><em>NDSS &lsquo;24</em></a>. San Diego, California, 26 February – 1 March, 2024. (Acceptance rate: ??%, Acceptance rate in summer: 41/211=19.4%, Acceptance rate in fall: ??%).
+  In <a href="https://www.ndss-symposium.org/ndss2024/" target="_blank" rel="noopener"><em>NDSS &lsquo;24</em></a>. San Diego, California, 26 February – 1 March, 2024. (Acceptance rate: 104/694=15.0%, Acceptance rate in summer: 41/211=19.4%, Acceptance rate in fall: 63/483=13.0%).
   
   <p>
 
@@ -1007,8 +1007,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/ndss24-b/ndss24fall-paper-zheng.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -1071,7 +1077,7 @@
   </span>
   (2024).
   <a href="/publication/ndss24-a/">BreakSPF: How Shared Infrastructures Magnify SPF Vulnerabilities Across the Internet</a>.
-  In <a href="https://www.ndss-symposium.org/ndss2024/" target="_blank" rel="noopener"><em>NDSS &lsquo;24</em></a>. San Diego, California, 26 February – 1 March, 2024. (Acceptance rate: ??%, Acceptance rate in summer: 41/211=19.4%, Acceptance rate in fall: ??%).
+  In <a href="https://www.ndss-symposium.org/ndss2024/" target="_blank" rel="noopener"><em>NDSS &lsquo;24</em></a>. San Diego, California, 26 February – 1 March, 2024. (Acceptance rate: 104/694=15.0%, Acceptance rate in summer: 41/211=19.4%, Acceptance rate in fall: 63/483=13.0%).
   
   <p>
 
@@ -1083,8 +1089,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/ndss24-a/ndss24summer_paper_wang.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
