--- a/publication/ndss24-a/index.html
+++ b/publication/ndss24-a/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 23, 2025 --><html lang="en-us" >
+<!-- Last Published: August 25, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -971,6 +971,20 @@
 
 
 
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://www.ndss-symposium.org/ndss-paper/breakspf-how-shared-infrastructures-magnify-spf-vulnerabilities-across-the-internet/" target="_blank" rel="noopener">
+    <i class="fas fa-link mr-1"></i>Conference Page</a>
 
 
 </div>
