--- a/publication/ndss24-b/index.html
+++ b/publication/ndss24-b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 23, 2025 --><html lang="en-us" >
+<!-- Last Published: August 25, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -959,6 +959,20 @@
 
 
 
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://www.ndss-symposium.org/ndss-paper/reqsminer-automated-discovery-of-cdn-forwarding-request-inconsistencies-and-dos-attacks-with-grammar-based-fuzzing/" target="_blank" rel="noopener">
+    <i class="fas fa-link mr-1"></i>Conference Page</a>
 
 
 </div>
