--- a/publication/security25/index.html
+++ b/publication/security25/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 23, 2025 --><html lang="en-us" >
+<!-- Last Published: August 25, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1030,7 +1030,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <a href="https://www.usenix.org/conference/usenixsecurity25" target="_blank" rel="noopener"><em>USENIX Security &lsquo;25</em></a>.  Seattle, WA, August 2025. (Acceptance rate: 407/2385=17.1%)</div>
+          <div class="col-12 col-md-9">In <a href="https://www.usenix.org/conference/usenixsecurity25" target="_blank" rel="noopener"><em>USENIX Security &lsquo;25</em></a>.  Seattle, WA, August 13–15, 2025. (Acceptance rate: 407/2385=17.1%)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
