--- a/publication/sp24-b/index.html
+++ b/publication/sp24-b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 23, 2025 --><html lang="en-us" >
+<!-- Last Published: August 25, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1013,7 +1013,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <a href="https://www.ieee-security.org/TC/SP2024/index.html" target="_blank" rel="noopener">Oakland S&amp;P ‘24</a>. San Francisco, California, May 20–23, 2024. (Acceptance rate: ??)</div>
+          <div class="col-12 col-md-9">In <a href="https://www.ieee-security.org/TC/SP2024/index.html" target="_blank" rel="noopener">Oakland S&amp;P ‘24</a>. San Francisco, California, May 20–23, 2024. (Acceptance rate: 261/1,466=17.8%)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
