--- a/publication/wisec24/index.html
+++ b/publication/wisec24/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 23, 2025 --><html lang="en-us" >
+<!-- Last Published: August 25, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1009,7 +1009,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <a href="https://wisec2024.kaist.ac.kr/" target="_blank" rel="noopener"><em>WiSec &lsquo;24</em></a>. Seoul, Korea. May 27 - May 30, 2024. (Acceptance rate: ??)</div>
+          <div class="col-12 col-md-9">In <a href="https://wisec2024.kaist.ac.kr/" target="_blank" rel="noopener"><em>WiSec &lsquo;24</em></a>. Seoul, Korea. May 27 - May 30, 2024. (Acceptance rate: 23/109=21.1%)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
